# apps/dapp/openapi.yml
@@ -77,13 +77,28 @@ paths:
         401:
           description: Unauthorized.
   /fees/estimate:
+    parameters:
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Estimates fees for an Order
       operationId: estimateFee
-      parameters:
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
       requestBody:
         description: An Order object.
         required: true
@@ -103,13 +118,28 @@ paths:
         500:
           description: Error estimating fees.
   /orders/new:
+    parameters:
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     post:
       summary: Submit a new order.
       operationId: createOrder
-      parameters:
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
       requestBody:
         description: A signed OrderRequest.
         required: true
@@ -128,16 +158,35 @@ paths:
           description: Bad Request - OrderRequest is not valid.
         500:
           description: Error processing OrderRequest.
-  /orders/address/{account_address}:
+  /orders/address/{address}:
+    parameters:
+      - name: address
+        in: path
+        description: The address being queried
+        schema:
+          type: string
+        required: true
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Get Orders for user address.
       operationId: getOrdersByAddress
-      parameters:
-        - $ref: "#/components/securitySchemes/AuthorizationHeader"
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
-        - $ref: "#/components/parameters/AccountAddressParameter"
       responses:
         200:
           description: An array of Orders for the specified address.
@@ -149,16 +198,37 @@ paths:
                   $ref: "#/components/schemas/Order"
         500:
           description: Error finding Orders.
-  /orders/address/{account_address}/active:
+      security:
+        - JWTAuthorization: []
+  /orders/address/{address}/active:
+    parameters:
+      - name: address
+        in: path
+        description: The address being queried
+        schema:
+          type: string
+        required: true
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Get active Orders for user address.
       operationId: getActiveOrdersByAddress
-      parameters:
-        - $ref: "#/components/securitySchemes/AuthorizationHeader"
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
-        - $ref: "#/components/parameters/AccountAddressParameter"
       responses:
         200:
           description: An array of active Orders for the specified address.
@@ -170,14 +240,31 @@ paths:
                   $ref: "#/components/schemas/Order"
         500:
           description: Error finding Orders.
+      security:
+        - JWTAuthorization: []
   /permissions/executors:
+    parameters:
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Get addresses with executor permissions.
-      operationId: getQuoteTokens
-      parameters:
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
+      operationId: getExecutors
       responses:
         200:
           description: An array of addresses with executor permissions.
@@ -191,12 +278,28 @@ paths:
         500:
           description: Error finding executors.
   /quote_tokens:
+    parameters:
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Returns all quote tokens on the chain specified in the X-Chain_Id header
-      parameters:
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
+      operationId: getSupportedQuoteTokens
       responses:
         200:
           description: A list of quote token addresses.
@@ -204,16 +307,40 @@ paths:
             application/json:
               schema:
                 type: array
+                items:
+                  description: Quote token address
+                  type: string
         500:
           description: Failed to get quote tokens or failed to serialize response.
   /quote_tokens/{address}:
+    parameters:
+      - name: address
+        in: path
+        description: The address being queried
+        schema:
+          type: string
+        required: true
+      - name: x-chain-id
+        in: header
+        description: The ID of a chain
+        schema:
+          type: integer
+        required: true
+      - name: x-aggregator
+        in: header
+        description: The address of the aggregator contract
+        schema:
+          type: string
+        required: true
+      - name: x-settlement
+        in: header
+        description: The address of the settlement contract
+        schema:
+          type: string
+        required: true
     get:
       summary: Checks whether the specified quote token is approved.
-      parameters:
-        - $ref: "#/components/headers/X-Chain-Id"
-        - $ref: "#/components/headers/X-Aggregator"
-        - $ref: "#/components/headers/X-Settlement"
-        - $ref: "#/components/parameters/AddressParameter"
+      operationId: isTokenSupported
       responses:
         200:
           description: Whether or not the quote token is approved.
@@ -227,9 +354,24 @@ components:
   schemas:
     JWTPair:
       description: A JSON object containing two string fields, access_token and refresh_token.
-      type: string
+      type: object
+      properties:
+        refresh_token:
+          type: string
+          description: A JWT refresh token
+        access_token:
+          type: string
+          description: A JWT access token
     SigninData:
       description: A JSON object containing two string fields, a Sign in With Ethereum message and signature. The nonce found in the decoded signature should match the nonce in the message.
+      type: object
+      properties:
+        message:
+          description: The messaged use with SIWE
+          type: string
+        signature:
+          description: The SIWE Signature
+          type: string
     OrderRequest:
       description: Parameters for an order, including a signature.
       type: object
@@ -296,43 +438,9 @@ components:
           description: Address of the user who submitted the order.
           type: string
   securitySchemes:
-    AuthorizationHeader:
+    JWTAuthorization:
       name: Authorization
       description: JWT Bearer Token
-      type: apiKey
-      in: header
-  headers:
-    X-Chain-Id:
-      description: The chain id to check
-      schema:
-        type: integer
-    X-Aggregator:
-      description: The address of the aggregator contract
-      schema:
-        type: string
-    X-Settlement:
-      description: The address of the settlement contract
-      schema:
-        type: string
-  parameters:
-    AccountAddressParameter:
-      in: path
-      description: The address of the Account being queried
-      name: account_address
-      schema:
-        type: string
-      required: true
-    AddressParameter:
-      in: path
-      description: The address being queried
-      name: address
-      schema:
-        type: string
-      required: true
-    ChainIdParameter:
-      in: path
-      description: The ID of a chain
-      name: chain_id
-      schema:
-        type: integer
-      required: true
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
